// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostsPage > Default story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 w-full page lightTheme"
>
  <div
    className="textRight"
  >
    Dark Mode
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-toggle-off fa-w-18 fa-2x clickable padTop10px"
      data-icon="toggle-off"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div
    className="app"
  >
    <header
      className="appHeader"
    >
      <img
        alt="logo"
        className="appLogo"
        src="/images/react.svg"
      />
      <h2>
        React App
      </h2>
      <small>
        A React starter app with SSR support.
      </small>
    </header>
    <br />
    <br />
    <div
      className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl content"
    >
      <div
        className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl"
      >
        <div
          className="flex justify-center"
        >
          <div
            className="w-full max-w-4xl"
          >
            <h1
              className="text-3xl font-bold mb-6"
            >
              Posts
            </h1>
            <div
              className="space-y-4"
            >
              <div
                className="rounded-lg bg-gray-50 dark:bg-gray-800 p-6 shadow-sm hover:shadow-md transition-shadow"
              >
                <a
                  className="block"
                  href="/posts/1"
                  onClick={[Function]}
                >
                  <h2
                    className="text-xl font-semibold mb-2 text-blue-600 hover:text-blue-800 capitalize"
                  >
                    sunt aut facere repellat provident occaecati excepturi optio reprehenderit
                  </h2>
                  <p
                    className="text-gray-600 dark:text-gray-300 line-clamp-2"
                  >
                    quia et suscipit
suscipit recusandae consequuntur expedita et cum
reprehenderit molestiae ut ut quas totam
nostrum rerum est autem sunt rem eveniet architecto
                  </p>
                  <div
                    className="mt-3 text-sm text-gray-500"
                  >
                    Post #
                    1
                     • User #
                    1
                  </div>
                </a>
              </div>
              <div
                className="rounded-lg bg-gray-50 dark:bg-gray-800 p-6 shadow-sm hover:shadow-md transition-shadow"
              >
                <a
                  className="block"
                  href="/posts/2"
                  onClick={[Function]}
                >
                  <h2
                    className="text-xl font-semibold mb-2 text-blue-600 hover:text-blue-800 capitalize"
                  >
                    qui est esse
                  </h2>
                  <p
                    className="text-gray-600 dark:text-gray-300 line-clamp-2"
                  >
                    est rerum tempore vitae
sequi sint nihil reprehenderit dolor beatae ea dolores neque
fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis
qui aperiam non debitis possimus qui neque nisi nulla
                  </p>
                  <div
                    className="mt-3 text-sm text-gray-500"
                  >
                    Post #
                    2
                     • User #
                    1
                  </div>
                </a>
              </div>
              <div
                className="rounded-lg bg-gray-50 dark:bg-gray-800 p-6 shadow-sm hover:shadow-md transition-shadow"
              >
                <a
                  className="block"
                  href="/posts/3"
                  onClick={[Function]}
                >
                  <h2
                    className="text-xl font-semibold mb-2 text-blue-600 hover:text-blue-800 capitalize"
                  >
                    ea molestias quasi exercitationem repellat qui ipsa sit aut
                  </h2>
                  <p
                    className="text-gray-600 dark:text-gray-300 line-clamp-2"
                  >
                    et iusto sed quo iure
voluptatem occaecati omnis eligendi aut ad
voluptatem doloribus vel accusantium quis pariatur
molestiae porro eius odio et labore et velit aut
                  </p>
                  <div
                    className="mt-3 text-sm text-gray-500"
                  >
                    Post #
                    3
                     • User #
                    1
                  </div>
                </a>
              </div>
              <div
                className="flex items-center justify-center gap-2 mt-8 flex-wrap"
              >
                <button
                  className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Previous
                </button>
                <button
                  className="px-4 py-2 rounded-lg bg-blue-600 text-white"
                  onClick={[Function]}
                  type="button"
                >
                  1
                </button>
                <button
                  className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
                  onClick={[Function]}
                  type="button"
                >
                  2
                </button>
                <button
                  className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
                  onClick={[Function]}
                  type="button"
                >
                  3
                </button>
                <button
                  className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
                  onClick={[Function]}
                  type="button"
                >
                  4
                </button>
                <button
                  className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600"
                  onClick={[Function]}
                  type="button"
                >
                  5
                </button>
                <button
                  className="px-4 py-2 rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 disabled:opacity-50 disabled:cursor-not-allowed"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Next
                </button>
              </div>
              <div
                className="text-center text-sm text-gray-500 mt-4"
              >
                Page 
                1
                 of 
                10
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostsPage > Empty story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 w-full page lightTheme"
>
  <div
    className="textRight"
  >
    Dark Mode
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-toggle-off fa-w-18 fa-2x clickable padTop10px"
      data-icon="toggle-off"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div
    className="app"
  >
    <header
      className="appHeader"
    >
      <img
        alt="logo"
        className="appLogo"
        src="/images/react.svg"
      />
      <h2>
        React App
      </h2>
      <small>
        A React starter app with SSR support.
      </small>
    </header>
    <br />
    <br />
    <div
      className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl content"
    >
      <div
        className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl"
      >
        <div
          className="flex justify-center"
        >
          <div
            className="w-full max-w-4xl"
          >
            <h1
              className="text-3xl font-bold mb-6"
            >
              Posts
            </h1>
            <div
              className="rounded-lg bg-gray-50 dark:bg-gray-800 p-6 shadow-sm text-center py-8"
            >
              <p
                className="text-gray-600 dark:text-gray-300"
              >
                No posts found.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostsPage > Error story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 w-full page lightTheme"
>
  <div
    className="textRight"
  >
    Dark Mode
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-toggle-off fa-w-18 fa-2x clickable padTop10px"
      data-icon="toggle-off"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div
    className="app"
  >
    <header
      className="appHeader"
    >
      <img
        alt="logo"
        className="appLogo"
        src="/images/react.svg"
      />
      <h2>
        React App
      </h2>
      <small>
        A React starter app with SSR support.
      </small>
    </header>
    <br />
    <br />
    <div
      className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl content"
    >
      <div
        className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl"
      >
        <div
          className="flex justify-center"
        >
          <div
            className="w-full max-w-4xl"
          >
            <h1
              className="text-3xl font-bold mb-6"
            >
              Posts
            </h1>
            <div
              className="rounded-lg bg-gray-50 dark:bg-gray-800 p-6 shadow-sm bg-red-50 dark:bg-red-900 border border-red-200 dark:border-red-700"
            >
              <p
                className="text-red-600 dark:text-red-200"
              >
                Failed to fetch posts
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostsPage > Loading story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 w-full page lightTheme"
>
  <div
    className="textRight"
  >
    Dark Mode
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-toggle-off fa-w-18 fa-2x clickable padTop10px"
      data-icon="toggle-off"
      data-prefix="fas"
      focusable="false"
      onClick={[Function]}
      role="img"
      style={{}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
        fill="currentColor"
        style={{}}
      />
    </svg>
  </div>
  <div
    className="app"
  >
    <header
      className="appHeader"
    >
      <img
        alt="logo"
        className="appLogo"
        src="/images/react.svg"
      />
      <h2>
        React App
      </h2>
      <small>
        A React starter app with SSR support.
      </small>
    </header>
    <br />
    <br />
    <div
      className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl content"
    >
      <div
        className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl"
      >
        <div
          className="flex justify-center"
        >
          <div
            className="w-full max-w-4xl"
          >
            <h1
              className="text-3xl font-bold mb-6"
            >
              Posts
            </h1>
            <div
              className="flex items-center justify-center gap-3 py-8"
            >
              <div
                className="inline-block animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite] h-8 w-8"
                role="status"
              >
                <span
                  className="sr-only"
                >
                  Loading...
                </span>
              </div>
              <span
                className="text-lg"
              >
                Loading posts...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
